// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`attach Puppeteer should pass for Chrome 1`] = `
Array [
  Array [
    Object {
      "browserURL": "http://localhost:1234",
      "defaultViewport": null,
    },
  ],
]
`;

exports[`attach Puppeteer should pass for Edge 1`] = `
Array [
  Array [
    Object {
      "browserURL": "http://localhost:1234",
      "defaultViewport": null,
    },
  ],
]
`;

exports[`attach Puppeteer should pass for Firefox (DevTools) 1`] = `
Array [
  Array [
    Object {
      "browserURL": "http://localhost:localhost:1234",
      "defaultViewport": null,
    },
  ],
]
`;

exports[`attach Puppeteer should pass for Firefox 1`] = `
Array [
  Array [
    Object {
      "browserURL": "http://localhost:4321",
      "defaultViewport": null,
    },
  ],
]
`;

exports[`attach Puppeteer should pass for Selenium CDP 1`] = `
Array [
  Array [
    Object {
      "browserWSEndpoint": "http://my.grid:1234/session/mytestsession/se/cdp",
      "defaultViewport": null,
    },
  ],
]
`;
exports[`attach Puppeteer should pass for Aerokube Moon CDP 1`] = `
Array [
  Array [
    Object {
      "browserWSEndpoint": "ws://my.grid:4444/wd/hub/devtools/foobar-123",
      "defaultViewport": null,
    },
  ],
]
`;

exports[`attach Puppeteer should pass for Aerokube Selenoid CDP 1`] = `
Array [
  Array [
    Object {
      "browserWSEndpoint": "ws://my.grid:4444/wd/hub/devtools/foobar-123",
      "defaultViewport": null,
    },
  ],
]
`;
